# rust_canvas

./: Cargo.toml
src/: main.rs
src/canvas/: mod.rs
src/diffusion/: mod.rs
src/helpers/: mod.rs
src/model/: elements.rs  mod.rs
src/view/: mod.rs
