[package]
name = "test_nannou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
reqwest = {version = "0.11.13", features = ["blocking"]}
nannou_egui = "0.5.0"
num-integer = "0.1.45"
mathlogic = "0.1.3"
sin_cos_ln_sqrt = "0.1.1"
diffusers = "0.2.0"
anyhow = "1"
thiserror = "1"
regex = "1.6.0"
tch = "^0.9.0"

clap = { version = "4.0.19", optional = true, features = ["derive"] }

[[example]]
name = "stable-diffusion"
required-features = ["clap"]

[[example]]
name = "stable-diffusion-img2img"
required-features = ["clap"]

[[example]]
name = "stable-diffusion-inpaint"
required-features = ["clap"]

[features]
doc-only = ["tch/doc-only"]

[package.metadata.docs.rs]
features = ["doc-only"]
