[package]
name = "test_nannou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
reqwest = {version = "0.11.13", features = ["blocking"]}
nannou_egui = "0.5.0"
num-integer = "0.1.45"
mathlogic = "0.1.3"
sin_cos_ln_sqrt = "0.1.1"
